fix some minor bugs: - map image is not aligned properly in Firefox - food gallery is not scrolled properly - some minor css

--- a/templates/green/css/template.css
+++ b/templates/green/css/template.css
@@ -2064,6 +2064,7 @@ header .article-tool .article-info {
     font-size: 18px;
     margin-left: 0;
     margin-right: 12px;
+	font-weight: bolder;
 }
 
 .st-our-work .category-wall span:hover,
